...
        case shop, cart, pets, profile

        var id: String { rawValue }

        var title: String {
            switch self {
            case .shop: return "Shop"
            case .cart: return "Cart"
            case .pets: return "My Pets"
            case .profile: return "Profile"
            }
        }

...
